--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+        repositories {
+                mavenCentral()
+        }
+        dependencies {
+                classpath("io.spring.javaformat:spring-javaformat-gradle-plugin:0.0.40")
+        }
+}
+
 plugins {
   id 'java'
   id 'org.springframework.boot' version '3.1.1'
@@ -6,6 +15,7 @@ plugins {
 }
 
 apply plugin: 'java'
+apply plugin: 'io.spring.javaformat'
 
 group = 'org.springframework.samples'
 version = '3.1.0'
